<resources>
    <string name="app_name">LIV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1125954750780745</string>
    <string name="fb_login_protocol_scheme">fb1125954750780745</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="enter_valid_location">Please enter a valid location</string>
    <string name="no_location_determined">No location determined.</string>
    <string name="miles">" miles"</string>
    <string name="category">"Category: "</string>
    <string name="location">"Location: "</string>
    <string name="description">"Reviews: "</string>
    <string name="check_this_out">Check out this place!</string>
    <string name="share">Share</string>
    <string name="reviews"><![CDATA[\'> Reviews</a>]]></string>
    <string name="logout">Logout</string>
    <string name="no_matches">No Matches!</string>
    <string name="no_matches_message">There are no matches for the custom search. Please make a new search.</string>
    <string name="new_search">New Search</string>
    <string name="restaurants">Restaurants:</string>
    <string name="drinks">Drinks</string>
    <string name="arts">Arts:</string>
    <string name="active_lifestyle">Active Lifestyle:</string>
    <string name="choose_custom_search">Choose custom search:</string>
    <string name="information">Information</string>
    <string name="liked_instructions">Click on the activity to view. Long click on the activity to delete from the list.</string>
    <string name="close">Close</string>
    <string name="instructions_venue">Click the thumbs down to dismiss the activity. Click the thumbs up mark to like the activity. Click the share button to share with your friends.</string>
    <string name="main_instructions">To like an activity, swipe right on the card or press the thumbs up button. To pass on the activity, swipe left on the card or click on the thumbs down button. To view the activity, click on the card.</string>
    <string name="no_internet">No Internet!</string>
    <string name="no_internet_message">Internet connection could not be achieved. Please try again, or else this baby will keep crying.</string>
    <string name="servers_unavailable">Servers Unavailable</string>
    <string name="unable_retrieve">Unable to retrieve information from servers at this time. Please try again.</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="low_matches_title">No more matches!</string>
    <string name="low_matches_message">The amount of matches for the query has run out. Please choose a new query.</string>
    <string name="no_google_serv">No Google Services</string>
    <string name="no_google_serv_message">Google Play Services need to be downloaded to acquire the device\'s location</string>
    <string name="no_location_serv">Cannot Connect to Google Location Services</string>
    <string name="choose_radius">Choose radius (mi)</string>
    <string name="choose_search_radius_mi">Choose search radius (Mi):</string>
    <string name="device_location_slow_internet">Unable to receive device\'s location. Please check internet connection or enable device location to use this feature</string>
    <string-array name="radius_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
</resources>
