<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/nav_scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose a location:"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="San Francisco"
                android:layout_column="1"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </TableRow>

        <TableRow
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Use device location:"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="start"/>

            <Switch
                android:id="@+id/phone_location_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/seekbar_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Miles"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:layout_column="1"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose search radius:"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_gravity="start"/>

            <SeekBar
                android:id="@+id/search_radius_seekbar"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                />
        </TableRow>

        <TableRow
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search Criteria"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_gravity="start"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="start"/>

            <Switch
                android:id="@+id/food_search_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinks"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="start"/>

            <Switch
                android:id="@+id/drink_search_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="start"/>

            <Switch
                android:id="@+id/arts_search_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_lifestyle"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="start"/>

            <Switch
                android:id="@+id/active_search_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_custom_search"
                android:textSize="12sp"
                android:layout_column="0"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/userQuery_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="pizza"
                android:layout_column="1"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </TableRow>

        <TableRow
            android:layout_margin="10dp">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:background="@drawable/logout_button"
                />
        </TableRow>

    </TableLayout>

</ScrollView>